--- a/style2wrapcolumn.css
+++ b/style2wrapcolumn.css
@@ -27,7 +27,7 @@
     display: flex; /* applies flex to class container */
     min-height: 100vh; /*extends the viewpoint height of the container to fill the whole screen */
     flex-wrap: wrap; /* wrapping the container - when making screen bigger boxes will space out with 400px */
-    flex-direction: column;
+    flex-direction: column; /* when used with box below will create a single column of numbers on one third of the page - will stay on 1/3 despite resixing of window */
 }
 
 .box {
