--- a/style5alignitems-baseline.css
+++ b/style5alignitems-baseline.css
@@ -30,7 +30,7 @@
     align-items: stretch; /* will stretch items to cover the page */
     align-items: flex-start; /* will align everything to the top of the page */
     align-items: flex-end; /* will align everything to the bottom of the page */
-    align-items: baseline; /* will align everything to the top of the page */
+    align-items: baseline;
     height: 100vh; /* adding this will provide dimensions for the above */
 }
 
@@ -39,3 +39,5 @@
 .box4 {font-size: 200px;}
 .box5 {font-size: 10px;}
 .box10 {font-size: 77px;}
+
+/* baseline here will align everything to one basline despite size */
